--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "pg": "^8.5.0",
     "pg-native": "^3.0.0",
     "sass": "^1.35.1",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "twilio": "^3.71.2"
   },
   "devDependencies": {
